# CppTgBot

./: .gitignore  CMakeLists.txt
StateMachine/: CMakeLists.txt  StateMachine.cpp
StateMachine/include/: StateMachine.h
Task/: CMakeLists.txt
Task/include/: Task.h
User/: CMakeLists.txt  User.cpp
User/include/: User.h
include/: TOKEN.h
src/: main.cpp
